# polymarket_auto_trader

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  PRD.md  README.md  backtest.py  bot.py  config.py  copybot.py  copybot_v2.py  copytrade.py  copytrade_ws.py  docker-compose.yml  flake.nix  logging_config.py  polymarket.py  polymarket_ws.py  process-compose.yaml  pyproject.toml  resilience.py  strategy.py  trade_history_full.json  trader.py
data/: .gitignore  btc_4h.csv  eth_4h.csv
docs/: ARCHITECTURE.md  CODEBASE_GUIDE.md  CONVENTIONS.md  DECISIONS.md  dev-workflow.md  multi_asset_research.md  strategy_research.md  vps-workflow.md  vps_implementation_plan.md
examples/custom_strategy/: pyproject.toml
examples/custom_strategy/src/example_strategy/: __init__.py  rsi_reversal.py
scripts/: 3barmomo_bot.py  analyze_fills.py  backtest.py  backtest_3barmomo.py  backtest_streak.py  compare_strategies.py  copybot.py  fetch_data.py  history.py  run_all_backtests.py  run_backtests.py  streak_bot.py  streak_bot_alternative_entry.py
src/: config.py
src/core/: blockchain.py  polymarket.py  polymarket_ws.py  trader.py
src/infra/: logging_config.py  resilience.py
src/strategies/: copytrade.py  copytrade_ws.py  selective_filter.py  streak.py
tests/: test_backtest.py  test_executor_imports.py  test_indicators.py  test_strategy_protocol.py  test_three_bar_momo.py
